animesocsite/static/style.css
body {
    background-color: black;
}

a {
    text-decoration: none;
}

::-webkit-scrollbar {
    display: none;
}

.headerbar {
    display: flex;
    flex-direction: row;
    align-items: center;
    background-color: black;
    flex-wrap: wrap;
}

.headerbar img {
    padding: 1vw;
    height: 15vw;
}
@media screen and (min-width: 1200px) {
    .headerbar img {
        height: 200px;
    }
}

.navigationbar {
    z-index: 100;
    top: 0;
    position: sticky;
    background-color: #f48023;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
}

.navigationlink {
    padding: 5px;
    font-family: 'Fredoka One', cursive;
    font-size: 5vw;
}
@media screen and (min-width: 800px) {
    .navigationlink {
        font-size: 24px;
    }
}

.navigationlink a {
    color: black;
    transition: 0.4s;
}

.navigationlink a:hover {
    color: white;
}

.title {
    color: white;
    font-family: 'Fredoka One', cursive;
    padding-left: 1vw;
    padding-right: 1vw;
    font-size: 6vw;
}
@media screen and (min-width: 1200px) {
    .title {
        font-size: 80px;
    }
}

.subtitle {
    color: white;
    font-family: 'Fredoka One', cursive;
    font-size: 1.5vw;
}

.smstray {
    display: flex;
    justify-content: flex-end;
    padding-left: 200px;
    flex-wrap: wrap;
}

.smstray img {
    height: 60px;
    width: auto;
    transition: 0.4s;
}

.smstray img:hover {
    opacity: 0.7;
}

@media screen and (max-width: 1800px) {
    .smstray {
        padding-left: 35%;
    }

    .smstray img {
        height: 5vw;
    }
}

.copy {
    font-family: 'Lato', sans-serif;
    font-size: 20px;
    padding: 50px;
    width: 60%;
    margin: 0 auto;
}

.sectiontitle {
    font-family: 'Fredoka One', cursive;
    font-size: 10vw;
    width: 100%;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 20px;
    opacity: 1;
}
@media screen and (min-width: 800px) {
    .sectiontitle {
        font-size: 80px;
    }
}

.about {
    background-image: url("art.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 850px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    color: white;
    position: relative;
}

.about::after {
    content: '';
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.3);
}

@keyframes fadein {
    from {opacity: 0; top: 30px;}
    to {opacity: 1; top: 0px;}
}

.about > div {
    text-shadow: 2px 2px 5px black;
    position: relative;
    z-index: 1;
    animation-name: fadein;
    animation-duration: 1.5s;
}

.joinus {
    background-color: black;
    color: #f48023;
    text-align: center;
}

.joinusbutton {
    background-color: #f48023;
    color: black;
    font-family: 'Lato', sans-serif;
    font-size: 20px;
    margin: 20px;
    padding: 20px;
    border-radius: 3px;
    transition: 0.4s;
    display: block;
    font-weight: bold;
}

.joinusbutton:hover {
    opacity: 0.7;
}

.joinus-buttoncontainer {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    margin: -10px 0 0 0;
}

.joinus-buttoncontainer > * {
    margin-top: 10px;
}

.events {
    background-color: lightgray;
}

.eventsdisplay {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-gap: 1rem;
    grid-auto-flow: row;
    margin-left: auto;
    margin-right: auto;
}

.event {
    font-family: 'Lato', sans-serif;
    background-color: darkgray;
    padding: 5px;
    margin: 20px;
    min-height: auto;
    border-radius: 5px;
    box-sizing: border-box;
} 

.eventTitle {
    font-size: 7vw;
    padding-top: 10px;
    padding-inline: 10px;
    text-align: center;
}

.eventDesc {
    padding: 20px;
    font-size: 5vw;
}

@media screen and (min-width: 630px) {
    .eventTitle {
        font-size: 40px;
    }
    
    .eventDesc {
        font-size: 20px;
    }
}

.committee {
    background-color: black;
    color: white;
}

.committeeimages {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    padding-bottom: 20px;
    padding-top: 20px;
} 

.committee img {
    width: 30%;
    height: auto;
} @media screen and (max-width: 1024px) {
    .committee img {
        width: 90vw;
        margin-top: 20px;
    }
}


.credit {
    font-family: 'Lato', sans-serif;
    background-color: black;
    color: white;
    font-size: 10px;
    text-align: center;
    padding: 20px;
}

